--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 Flask==3.0.3
 numpy==2.0.0
-opencv_python==4.10.0.84
-Requests==2.32.3
-flask-restx==1.3.0
-BeautifulSoup4==4.10.0
+opencv-python==4.10.0.84
+packaging==24.1
+pluggy==1.5.0
+pytest==8.3.2
+pytz==2024.1
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.20.0
+soupsieve==2.6
+urllib3==2.2.2
+Werkzeug==3.0.4
